# OpenDiS

cmake/: sys.cmake.dghpc  sys.cmake.ubuntu
core/pydis/c/tests/: CMakeLists.txt
